# livechart

./: .gitignore  README.md  pyproject.toml
chart/: demo_data.json
chart/chart/: settings.py  urls.py
chart/icu/: admin.py  models.py  views.py
chart/icu/migrations/: 0001_initial.py  0002_patient_text.py  0003_rename_text_patient_care_plan.py
chart/icu/templates/: patient_data.txt
chart/livechartai/: agent.py  chain.py  patient_care.py
